add_compile_definitions(
        GUITARLSTM_MODELS_PATH_TENSORFLOW="${GUITARLSTM_MODELS_PATH_TENSORFLOW}"
        GUITARLSTM_MODELS_PATH_PYTORCH="${GUITARLSTM_MODELS_PATH_PYTORCH}"
        STEERABLENAFX_MODELS_PATH_TENSORFLOW="${STEERABLENAFX_MODELS_PATH_TENSORFLOW}"
        STEERABLENAFX_MODELS_PATH_PYTORCH="${STEERABLENAFX_MODELS_PATH_PYTORCH}"
        STATEFULLSTM_MODELS_PATH_TENSORFLOW="${STATEFULLSTM_MODELS_PATH_TENSORFLOW}"
        STATEFULLSTM_MODELS_PATH_PYTORCH="${STATEFULLSTM_MODELS_PATH_PYTORCH}"
        SIMPLEGAIN_MODEL_PATH="${SIMPLEGAIN_MODEL_PATH}"
        RAVE_MODEL_DIR="${RAVE_MODEL_DIR}"
)


if(ANIRA_WITH_BENCHMARK)
    add_subdirectory(benchmark)
endif()

add_subdirectory(minimal-inference)
add_subdirectory(juce-audio-plugin)
add_subdirectory(clap-audio-plugin)